; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_adl_pci9118.c_start_pacer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_adl_pci9118.c_start_pacer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i64 }

@PCI9118_CNTCTRL = common dso_local global i64 0, align 8
@PCI9118_CNT2 = common dso_local global i64 0, align 8
@PCI9118_CNT1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*, i32, i32, i32)* @start_pacer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_pacer(%struct.comedi_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.comedi_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %10 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @PCI9118_CNTCTRL, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @outl(i32 116, i64 %13)
  %15 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %16 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @PCI9118_CNTCTRL, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @outl(i32 180, i64 %19)
  %21 = call i32 @udelay(i32 1)
  %22 = load i32, i32* %6, align 4
  %23 = icmp eq i32 %22, 1
  br i1 %23, label %30, label %24

24:                                               ; preds = %4
  %25 = load i32, i32* %6, align 4
  %26 = icmp eq i32 %25, 2
  br i1 %26, label %30, label %27

27:                                               ; preds = %24
  %28 = load i32, i32* %6, align 4
  %29 = icmp eq i32 %28, 4
  br i1 %29, label %30, label %65

30:                                               ; preds = %27, %24, %4
  %31 = load i32, i32* %8, align 4
  %32 = and i32 %31, 255
  %33 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %34 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* @PCI9118_CNT2, align 8
  %37 = add nsw i64 %35, %36
  %38 = call i32 @outl(i32 %32, i64 %37)
  %39 = load i32, i32* %8, align 4
  %40 = lshr i32 %39, 8
  %41 = and i32 %40, 255
  %42 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %43 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @PCI9118_CNT2, align 8
  %46 = add nsw i64 %44, %45
  %47 = call i32 @outl(i32 %41, i64 %46)
  %48 = load i32, i32* %7, align 4
  %49 = and i32 %48, 255
  %50 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %51 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = load i64, i64* @PCI9118_CNT1, align 8
  %54 = add nsw i64 %52, %53
  %55 = call i32 @outl(i32 %49, i64 %54)
  %56 = load i32, i32* %7, align 4
  %57 = lshr i32 %56, 8
  %58 = and i32 %57, 255
  %59 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %60 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = load i64, i64* @PCI9118_CNT1, align 8
  %63 = add nsw i64 %61, %62
  %64 = call i32 @outl(i32 %58, i64 %63)
  br label %65

65:                                               ; preds = %30, %27
  ret void
}

declare dso_local i32 @outl(i32, i64) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
